feat(release): add linux-arm64 build support
- Add linux-arm64 matrix entry to release workflow using cross-compilation
- Pass GOARCH env var to build step for arm64 cross-compile on ubuntu runner
- Remove linux-arm64 platform block from install script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ jobs:
             artifact: buns-macos-x64
           - os: ubuntu-latest
             artifact: buns-linux-x64
+          - os: ubuntu-latest
+            artifact: buns-linux-arm64
+            goarch: arm64
 
     runs-on: ${{ matrix.os }}
 
@@ -37,6 +40,8 @@ jobs:
 
       - name: Build binary
         run: make build-release VERSION=${{ steps.version.outputs.version }}
+        env:
+          GOARCH: ${{ matrix.goarch }}
 
       - name: Rename binary
         run: mv bin/buns bin/${{ matrix.artifact }}
